--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".Translate"></activity>
+        <activity android:name=".SignUpActivity"></activity>
+
+
     </application>
 
 </manifest>
